testsuite/tests/typecheck/should_fail/tcfail181.stderr

tcfail181.hs:17:9: error:
    • Could not deduce (Monad m0) arising from a use of ‘foo’
      from the context: Monad m
        bound by the inferred type of
                 wog :: Monad m => p -> Something (m Bool) e
        at tcfail181.hs:17:1-30
      The type variable ‘m0’ is ambiguous
      These potential instances exist:
        instance Monad IO -- Defined in ‘GHC.Base’
        instance Monad Maybe -- Defined in ‘GHC.Base’
        instance Monoid a => Monad ((,) a) -- Defined in ‘GHC.Base’
        ...plus one other
        ...plus one instance involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the expression: foo
      In the expression: foo {bar = return True}
      In an equation for ‘wog’: wog x = foo {bar = return True}
